environments/TST3/webportal-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: 2018-12-21T14:43:35Z
  generation: 2
  labels:
    app: production
    chart: auto-deploy-app-0.2.6
    heritage: Tiller
    release: production
    tier: web
    track: stable
  name: production
  namespace: webportal1-9373289
  resourceVersion: "555947"
  selfLink: /apis/extensions/v1beta1/namespaces/webportal1-9373289/deployments/production
  uid: cb84d31d-052e-11e9-93ee-42010a84002b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: production
      release: production
      tier: web
      track: stable
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: production
        release: production
        tier: web
        track: stable
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgres://user:testing-password@production-postgres:5432/production
        image: registry.gitlab.com/sweagle/webportal1/master:0438ccf46057d18540ffad8ef7a366fa08946d87
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
        name: auto-deploy-app
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: gitlab-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: 2018-12-21T14:43:35Z
    lastUpdateTime: 2018-12-21T14:43:35Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2018-12-21T15:25:16Z
    lastUpdateTime: 2018-12-21T15:25:30Z
    message: ReplicaSet "production-8c59df767" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
